add: navigation icons and styles

--- a/components/common/Header.module.scss
+++ b/components/common/Header.module.scss
@@ -6,14 +6,38 @@
   display: flex;
   justify-content: space-between;
 
+  > a {
+    display: inline-block;
+    padding: 12px;
+  }
+  .icon {
+    font-size: 2.6rem;
+  }
+
   @media screen and (min-width: $desktop) {
+    align-items: center;
     flex-direction: column;
     height: 100vh;
+    padding: 15px 0;
     position: fixed;
     width: 70px;
 
     .hamburger {
       display: none;
+    }
+    > a {
+      padding: 0;
+    }
+    .myaccount {
+      opacity: .5;
+      transition-duration: .3s;
+
+      &:hover {
+        opacity: 1;
+      }
+      .icon {
+        font-size: 4.2rem;
+      }
     }
   }
 }
