--- a/components/common/Navigation.module.scss
+++ b/components/common/Navigation.module.scss
@@ -8,7 +8,7 @@
   position: fixed;
   top: 0;
 
-  .link {
+  > a {
     display: block;
     padding: 10px 20px;
   }
@@ -19,10 +19,19 @@
     display: flex;
     flex-direction: column;
     flex-grow: 1;
+    gap: 5px;
     height: auto;
     position: static;
 
-    .link {
+    > a {
+      display: block;
+      opacity: .5;
+      padding: 10px;
+      transition-duration: .3s;
+
+      &:hover, &.active {
+        opacity: 1;
+      }
       .icon {
         font-size: 3rem;
       }
