--- a/components/common/Header.module.scss
+++ b/components/common/Header.module.scss
@@ -6,6 +6,11 @@
   display: flex;
   justify-content: space-between;
 
+  .logo {
+    width: 75px;
+    padding: 0;
+    margin-bottom: -30px;
+  }
   > a {
     display: inline-block;
     padding: 12px;
@@ -22,6 +27,10 @@
     position: fixed;
     width: 70px;
 
+    .logo {
+      width: 100px;
+      margin: -7px -70px 0 0;
+    }
     .hamburger {
       display: none;
     }
