--- a/components/cards/Card.module.scss
+++ b/components/cards/Card.module.scss
@@ -1,24 +1,40 @@
 .card {
   background-color: #fff;
   border: 1px solid #EEEEEE;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
+  max-width: 320px;
   padding: 15px;
+  width: auto;
 
   .data {
     background-color: #EEEEEE;
 
-    h2 {
-      color: #000000;
-      font-size: 1.8rem;
-      font-weight: 800;
-      margin: 0;
+    .header {
+      padding: 40px 16px 25px;
+      text-align: center;
+
+      h2 {
+        color: #000000;
+        font-size: 1.8rem;
+        font-weight: 800;
+        margin: 0 0 10px;
+      }
+      .desc {
+        font-size: 1.5rem;
+      }
     }
-    .desc {
-      font-size: 1.5rem;
-    }
-    .team {
-      color: #8C8C8C;
-      font-size: 1rem;
-      text-transform: uppercase;
+    .footer {
+      align-items: center;
+      display: flex;
+      gap: 10px;
+      justify-content: space-between;
+
+      .team {
+        color: #8C8C8C;
+        font-size: 1.2rem;
+        padding: 0 8px;
+        text-transform: uppercase;
+      }
     }
   }
 }
