--- a/components/cards/List.module.scss
+++ b/components/cards/List.module.scss
@@ -1,4 +1,22 @@
+@import '../../styles/variables';
+
 .list {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  gap: 19px;
   list-style: none;
+  margin: 0;
   padding: 0;
+
+  > li {
+    margin: 0;
+    padding: 0;
+  }
+
+  @media screen and (min-width: 800px) {
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: flex-start;
+  }
 }
