--- a/components/common/SectionHeader.module.scss
+++ b/components/common/SectionHeader.module.scss
@@ -2,16 +2,25 @@
 
 .header {
   background-color: #CECECE;
-  padding: 35px 0 15px;
+  padding: 35px 0 20px;
   text-align: center;
 
   h1 {
     font-size: 2rem;
+    margin: 0;
+    padding: 0;
   }
 
   @media screen and (min-width: $tablet) {
     h1 {
       font-size: 2.5rem;
     }
+  }
+  @media screen and (min-width: $desktop) {
+    align-items: center;
+    display: flex;
+    min-height: 104px;
+    padding: 15px 15px 15px 55px;
+    text-align: left;
   }
 }
