--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -6,6 +6,8 @@ $title-font:  'Open Sans', sans-serif;
 $color-site: #39758E;
 $color-body-background: #EEEEEE;
 $color-normal-text: #7A7A7A;
+$color-red: #CF0606;
+$color-green: #0DB65B;
 
 // Breakpoints
 $mobile-large: 440px;
