add: card team colors

--- a/components/cards/list/Card.module.scss
+++ b/components/cards/list/Card.module.scss
@@ -6,6 +6,14 @@
   padding: 15px;
   width: auto;
 
+  .image {
+    .colorsec {
+      height: 4px;
+    }
+    .colorpri {
+      height: 10px;
+    }
+  }
   .data {
     background-color: #EEEEEE;
 
