--- a/components/cards/list/Card.module.scss
+++ b/components/cards/list/Card.module.scss
@@ -7,6 +7,22 @@
   width: auto;
 
   .image {
+    overflow: hidden;
+
+    a {
+      display: block;
+      line-height: 0;
+
+      img {
+        display: block;
+        transition-duration: 4s;
+      }
+      &:hover {
+        img {
+          transform: scale(1.2);
+        }
+      }
+    }
     .colorsec {
       height: 4px;
     }
