--- a/components/cards/list/Card.module.scss
+++ b/components/cards/list/Card.module.scss
@@ -44,6 +44,13 @@
         padding: 0 8px;
         text-transform: uppercase;
       }
+      .emv {
+        background-color: #fff;
+        border: 1px solid #eee;
+        margin-bottom: -8px;
+        margin-right: -9px;
+        padding: 9px;
+      }
     }
   }
 }
