--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -30,3 +30,29 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.button {
+  background-color: $color-site;
+  color: #fff;
+  display: inline-block;
+  padding: 8px 20px;
+  text-align: center;
+  transition-duration: .4s;
+
+  &:hover {
+    background-color: #000;
+    color: #fff;
+  }
+}
+
+.buttonExpand {
+  background: transparent;
+  border: none;
+  color: $color-normal-text;
+  cursor: pointer;
+  font-size: 2rem;
+
+  &.expanded {
+    transform: rotate( 180deg );
+  }
+}
