--- a/components/cards/detail/PurchaseData.module.scss
+++ b/components/cards/detail/PurchaseData.module.scss
@@ -1,7 +1,7 @@
 @import '../../../styles/variables';
 
 .purchaseData {
-  background-color: #fff;
+  background-color: $color-light-gray;
   color: #000;
   margin-bottom: 2px;
   padding: 10px;
@@ -19,6 +19,7 @@
   &.open {
     .detail {
       display: block;
+      margin-bottom: 25px;
     }
   }
 }
