--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -4,7 +4,9 @@ $title-font:  'Open Sans', sans-serif;
 
 // Colors
 $color-site: #39758E;
+$color-site-dark: #143847;
 $color-body-background: #EEEEEE;
+$color-light-gray: #F9F9F9;
 $color-normal-text: #7A7A7A;
 $color-red: #CF0606;
 $color-green: #0DB65B;
