--- a/components/cards/detail/Detail.module.scss
+++ b/components/cards/detail/Detail.module.scss
@@ -72,8 +72,13 @@
       flex-grow: 1;
     }
   }
+  .similarItems {
+    margin: 0 auto;
+    max-width: 500px;
+  }
 
   @media screen and (min-width: $desktop-l) {
+    align-items: flex-start;
     display: flex;
     gap: 30px;
     margin-top: -31px;
@@ -88,6 +93,7 @@
     .dataDesk {
       display: block;
       margin-bottom: 40px;
+      max-width: 800px;
     }
     .deskLeft {
       flex-shrink: 0;
@@ -97,6 +103,10 @@
     }
     .image {
       margin-top: -45px;
+    }
+    .similarItems {
+      margin: 0;
+      max-width: none;
     }
   }
 }
