--- a/components/cards/list/Card.module.scss
+++ b/components/cards/list/Card.module.scss
@@ -4,6 +4,7 @@
   background-color: #fff;
   border: 1px solid #EEEEEE;
   box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
+  margin: 0 auto;
   max-width: 320px;
   padding: 15px;
   width: auto;
