fix: breadcrumb styles and html

--- a/components/common/Breadcrumb.module.scss
+++ b/components/common/Breadcrumb.module.scss
@@ -1,4 +1,9 @@
 .breadcrumb {
+  overflow: hidden;
+  padding: 0 10px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+
   .current {
     font-weight: bold;
   }
